# open-bitdemon-emulator

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
auth/auth-server/: Cargo.toml
auth/auth-server/src/: lib.rs  main.rs  response.rs
auth/auth-server/src/auth_handler/: authentication_request.rs  mod.rs  steam.rs
auth/auth-server/src/response/: auth_response.rs  mod.rs
auth/auth-server/src/result/: auth_proof.rs  auth_ticket.rs  mod.rs
dw-server/: Cargo.toml
dw-server/src/: config.rs  log.rs  main.rs
dw-server/src/lobby/: env.rs  mod.rs  storage.rs
dw-server/src/lobby/content_streaming/: db.rs  http.rs  mod.rs  publisher_file.rs  user_file.rs
dw-server/src/lobby/counter/: mod.rs  service.rs
dw-server/src/lobby/group/: mod.rs  service.rs
dw-server/src/lobby/matchmaking/: mod.rs  service.rs
dw-server/src/lobby/profile/: db.rs  mod.rs  service.rs
dw-server/src/lobby/rich_presence/: mod.rs  service.rs
dw-server/src/lobby/storage/: db.rs  mod.rs  publisher_file.rs  user_file.rs
libbitdemon/: Cargo.toml
libbitdemon/src/: lib.rs
libbitdemon/src/auth/: auth_proof.rs  auth_server.rs  authentication.rs  key_store.rs  mod.rs  response.rs
libbitdemon/src/auth/auth_handler/: authentication_request.rs  mod.rs  steam.rs
libbitdemon/src/auth/result/: auth_ticket.rs
libbitdemon/src/crypto/: mod.rs
libbitdemon/src/domain/: mod.rs  result_slice.rs  title.rs
libbitdemon/src/lobby/: lsg.rs  mod.rs
libbitdemon/src/lobby/anti_cheat/: mod.rs
libbitdemon/src/lobby/bandwidth/: handler.rs  mod.rs  result.rs
libbitdemon/src/lobby/content_streaming/: handler.rs  mod.rs  result.rs  service.rs
libbitdemon/src/lobby/counter/: handler.rs  mod.rs  result.rs  service.rs
libbitdemon/src/lobby/dml/: handler.rs  mod.rs  result.rs
libbitdemon/src/lobby/event_log/: handler.rs  mod.rs  result.rs
libbitdemon/src/lobby/group/: handler.rs  mod.rs  result.rs  service.rs
libbitdemon/src/lobby/handler/: dml.rs  league.rs  mod.rs  storage.rs  title_utilities.rs
libbitdemon/src/lobby/key_archive/: handler.rs  mod.rs  result.rs
libbitdemon/src/lobby/league/: mod.rs
libbitdemon/src/lobby/matchmaking/: handler.rs  mod.rs  service.rs
libbitdemon/src/lobby/profile/: handler.rs  mod.rs  result.rs  service.rs
libbitdemon/src/lobby/response/: lsg_reply.rs  task_reply.rs
libbitdemon/src/lobby/rich_presence/: handler.rs  mod.rs  result.rs  service.rs
libbitdemon/src/lobby/service/: anti_cheat.rs  bandwidth.rs  lobby.rs  mod.rs  storage.rs
libbitdemon/src/lobby/storage/: handler.rs  mod.rs  result.rs  service.rs
libbitdemon/src/lobby/title_utilities/: handler.rs  mod.rs  result.rs
libbitdemon/src/lobby/twitch/: handler.rs  mod.rs  result.rs
libbitdemon/src/lobby/vote_rank/: handler.rs  mod.rs
libbitdemon/src/lobby/youtube/: handler.rs  mod.rs  result.rs
libbitdemon/src/messaging/: bd_data_type.rs  bd_error_code.rs  bd_message.rs  bd_reader.rs  bd_response.rs  bd_serialization.rs  bd_writer.rs  mod.rs
libbitdemon/src/networking/: bd_message.rs  bd_server.rs  bd_session.rs  bd_socket.rs  mod.rs  session_manager.rs
lobby/lobby-server/: Cargo.toml
lobby/lobby-server/src/: lib.rs  main.rs
lobby/lobby-server/src/response/: lsg_reply.rs  mod.rs  task_reply.rs
lobby/lobby-server/src/service/: anti_cheat.rs  bandwidth.rs  lobby.rs  mod.rs
lobby/service-anti-cheat/: Cargo.toml
lobby/service-bandwidth/: Cargo.toml
lobby/service-content-streaming/: Cargo.toml
lobby/service-counter/: Cargo.toml
lobby/service-dml/: Cargo.toml
lobby/service-event-log/: Cargo.toml
lobby/service-facebook/: Cargo.toml
lobby/service-friends/: Cargo.toml
lobby/service-group/: Cargo.toml
lobby/service-key-archive/: Cargo.toml
lobby/service-league/: Cargo.toml
lobby/service-link-code/: Cargo.toml
lobby/service-mail/: Cargo.toml
lobby/service-matchmaking/: Cargo.toml
lobby/service-messaging/: Cargo.toml
lobby/service-pooled-storage/: Cargo.toml
lobby/service-profiles/: Cargo.toml
lobby/service-rich-presence/: Cargo.toml
lobby/service-stats/: Cargo.toml
lobby/service-storage/: Cargo.toml
lobby/service-subscription/: Cargo.toml
lobby/service-tags/: Cargo.toml
lobby/service-teams/: Cargo.toml
lobby/service-title-utilities/: Cargo.toml
lobby/service-twitch/: Cargo.toml
lobby/service-twitter/: Cargo.toml
lobby/service-vote-rank/: Cargo.toml
lobby/service-youtube/: Cargo.toml
