[workspace]
members = [
    "libbitdemon",
    "auth/auth-server",
    "lobby/lobby-server",
    "lobby/service-anti-cheat",
    "lobby/service-bandwidth",
    "lobby/service-content-streaming",
    "lobby/service-counter",
    "lobby/service-dml",
    "lobby/service-event-log",
    "lobby/service-facebook",
    "lobby/service-friends",
    "lobby/service-group",
    "lobby/service-key-archive",
    "lobby/service-league",
    "lobby/service-link-code",
    "lobby/service-mail",
    "lobby/service-matchmaking",
    "lobby/service-messaging",
    "lobby/service-pooled-storage",
    "lobby/service-profiles",
    "lobby/service-rich-presence",
    "lobby/service-stats",
    "lobby/service-storage",
    "lobby/service-subscription",
    "lobby/service-tags",
    "lobby/service-teams",
    "lobby/service-title-utilities",
    "lobby/service-twitch",
    "lobby/service-twitter",
    "lobby/service-vote-rank",
    "lobby/service-youtube"
]
resolver = "1"

[workspace.dependencies]
byteorder = "1.5.0"
cbc = "0.1.2"
chrono = "0.4.39"
des = "0.8.1"
env_logger = "0.11.6"
log = "0.4.25"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.9.0"
snafu = "0.8.5"
tiger = "0.2.1"
