[workspace]
members = [
    "libbitdemon",
    "dw-server"
]
resolver = "1"

[workspace.dependencies]
byteorder = "1.5.0"
cbc = "0.1.2"
chrono = "0.4.39"
des = "0.8.1"
env_logger = "0.11.6"
hmac = "0.12.1"
log = "0.4.25"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.9.0"
sha1 = "0.10.6"
snafu = "0.8.5"
tiger = "0.2.1"
