[package]
name = "dw-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["file-stream"] }
env_logger = "0.11.8"
jsonwebtoken = { version = "9.3.1", default-features = false }
libbitdemon = { path = "../libbitdemon" }
rusqlite = { version = "0.37.0", features = ["bundled", "blob", "array"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }

chrono.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
