[package]
name = "dw-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["file-stream"] }
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
libbitdemon = { path = "../libbitdemon" }
rusqlite = { version = "0.37.0", features = ["bundled", "blob", "array"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }

chrono.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
