[package]
name = "dw-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["file-stream"] }
env_logger = "0.11.10"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
libbitdemon = { path = "../libbitdemon" }
rusqlite = { version = "0.39.0", features = ["bundled", "blob", "array", "fallible_uint"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }

chrono.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
