[package]
name = "libbitdemon"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[lib]
name = "bitdemon"

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
cbc = "0.1.2"
chrono.workspace = true
des = "0.8.1"
hmac = "0.12.1"
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand = "0.9.0"
sha1 = "0.10.6"
snafu.workspace = true
tiger = "0.2.1"
