[package]
name = "libbitdemon"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"

[lib]
name = "bitdemon"

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
cbc = "0.2.0"
des = "0.8.1"
hmac = "0.13.0"
sha1 = "0.11.0"
tiger = "0.3.0"

chrono.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
snafu.workspace = true
