[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
libbitdemon = { path = "../../libbitdemon" }

byteorder.workspace = true
cbc.workspace = true
chrono.workspace = true
des.workspace = true
env_logger.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
snafu.workspace = true
tiger.workspace = true
